# VirtualMachine

./: CMakeLists.txt  VMGeneralPurposeRegisters.h  VirtualMachine.cpp  VirtualMachine.h  constants.h
src/: CMakeLists.txt  VirtualMachine.cpp  VirtualMachine.h  main.cpp
src/VMMemory/: CMakeLists.txt  VMMemory.cpp  VMMemory.h
test/: CMakeLists.txt  example_test.cpp
